--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<img src="10-conseils-pour-rendre-votre-chien-heureux_5542245.jpg" height="600" width="1080"/>
+
 <p> Ceci est un projet qui est sur Github</p>
 
 </body>
